# llm-dte

./: .gitignore  README.md  README.rst  requirements.txt  setup.cfg
examples/: example.py  mushroom_example.py
examples/exps/llm/: example_5.txt
examples/exps/rule-based/: example_5.txt
explainDecisionTree/: __init__.py  exp_gen.py  main.py  mushroom_example.py  ques_gen.py
explainDecisionTree/exps/llm/: example_5.txt
explainDecisionTree/exps/rule-based/: example_5.txt
