[metadata]
name = explainDecisionTree
version = 0.1.0
author = Noah Ziems, Gang Liu, John Flanagan, Meng Jiang
author_email = {nziems2, gliu7, jflanag5, mjiang2}@nd.edu
description = A tool for generating natural language explanations for decision tree predictions
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Topic :: Artificial Intelligence

[options]
packages = find:
python_requires = >=3.6
install_requires =
    pandas
    scikit-learn
    numpy