[metadata]
name = explainDecisionTree
version = 0.1.4
Home-page: https://test.pypi.org/project/explainDecisionTree/
author = Noah Ziems, Gang Liu, John Flanagan, Meng Jiang
author_email = nziems2@nd.edu, gliu7@nd.edu, jflanag5@nd.edu, mjiang2@nd.edu
description = A tool for generating natural language explanations for decision tree predictions
long_description = file: README.rst
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
python_requires = >=3.6
install_requires =
    python-dotenv
    pandas
    scikit-learn
    openai